documenting sticky.js

--- a/src/templates/layouts/base.html
+++ b/src/templates/layouts/base.html
@@ -48,13 +48,7 @@
                 {% menu 'pages/workflows/ + ./src/templates/pages/workflows + b-0 br-0' %}
             </div>
             <div class="documentation__body">
-                {% block main %}
-                    <div class="note note--attention note--large m-b-4">
-                        <div class="note__body">
-                            <p>No content yet.</p>
-                        </div>
-                    </div>
-                {% endblock %}
+                {% block main %}{% endblock %}
             </div>
             <footer class="documentation__footer">
                 <div class="center">
