--- a/src/templates/pages/elements/menu.html
+++ b/src/templates/pages/elements/menu.html
@@ -43,7 +43,7 @@ This is the basic example of a `.menu` instance. You are free to use any markup 
 As mentioned above, a `.menu` instance may have up to three levels of nested sub menus. See the folowing example.
 {% endmarkdown %}
 
-<div class="note note--attention note--large note--icon085 m-t-8">
+<div class="note note--attention note--large note--icon085 m-t-8 b-0">
     <h3 class="note__headline">Limited Nesting</h3>
     <div class="note__body">
         <p>In order to not break the layout, please make sure you only nest up to three levels deep, like in the following example.</p>
