--- a/src/templates/pages/introduction/_how_to_use_this_documentation.html
+++ b/src/templates/pages/introduction/_how_to_use_this_documentation.html
@@ -44,14 +44,14 @@ Some examples have options to **toggle the code block** and to **toggle the exam
 Notes display important information – restrictions, possible browser quirks, best practices, etc.
 {% endmarkdown %}
 
-<div class="note note--error note--large note--icon085 m-t-8">
+<div class="note note--error note--large note--icon085 m-t-8 b-0">
     <h3 class="note__headline">Warning!</h3>
     <div class="note__body">
         <p>This information is extremely important! Don’t miss it.</p>
     </div>
 </div>
 
-<div class="note note--attention note--large note--icon085 m-t-8">
+<div class="note note--attention note--large note--icon085 m-t-8 b-0">
     <h3 class="note__headline">Attention!</h3>
     <div class="note__body">
         <p>This information provides better understanding or offers a hint.</p>
