--- a/src/templates/pages/introduction/project_structure.html
+++ b/src/templates/pages/introduction/project_structure.html
@@ -100,7 +100,7 @@ The following table describes the three main directories.
 | readme.md        | The readme file offers a quick start point and guides through the setup process.                                      |
 {% endmarkdown %}
 
-<div class="note note--error note--large note--icon085 m-t-8">
+<div class="note note--error note--large note--icon085 m-t-8 b-0">
     <h3 class="note__headline">Never Store Passwords inside the Repository!</h3>
     <div class="note__body">
         <p>While in may seem inconvenient, it is very important to **never store passwords inside the files under version control**. The reason is simple: If someone gains access to the GIT repository, she must not find additional passwords and therefore cause even more damage.</p>
