--- a/src/templates/pages/elements/modal.html
+++ b/src/templates/pages/elements/modal.html
@@ -99,7 +99,7 @@ It’s possible to use modals on mobile pages as well, although it’s probably 
 ### Modals to External Pages
 {% endmarkdown %}
 
-<div class="note note--error note--large note--icon085 m-t-8">
+<div class="note note--error note--large note--icon085 m-t-8 b-0">
     <h3 class="note__headline">Modals Must Not Load External Pages</h3>
     <div class="note__body">
         <p>The modals are not designed to reference external pages. Apart from the fact that <em>http:</em> breaks the option-notation, it is not desired to load external pages (and possibly injected scripts) we have no control over into our environment.</p>
